# eiffel

./: .gitignore  README.md
niryo/: CMakeLists.txt  challenge_1.py  package.xml
niryo/src/: challenge_1.py  challenge_2.py
pibot-control/: CMakeLists.txt  package.xml
pibot-control/config/: nav2_params.yaml
pibot-control/config/map/: map.pgm  map.yaml
pibot-control/config/map2/: map.pgm  map.yaml
pibot-control/launch/: base_launch.yaml  load_map.py  map_explore_launch.yaml  map_mvt.py
pibot-control/src/: remap  robotLogic
